--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
+
 .grid-container
 {
     margin-left: 0.5rem;
@@ -16,4 +18,92 @@
   border: 1, solid, salmon;
   background-color: salmon;
   color: aliceblue;
+}
+.headersstyle
+{
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+   text-align: center;
+}
+
+
+/* animations */
+/* title */
+.title {
+	font-family: "Montserrat";
+	text-align: center;
+	color: #FFF;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	height: 30vh;
+	letter-spacing: 1px;
+}
+
+/* quick
+ https://media.giphy.com/media/rlUh6GM9rQk7e/giphy.gif
+ smoke
+ https://media.giphy.com/media/26BROrSHlmyzzHf3i/giphy.gif
+ cooking
+ https://media.giphy.com/media/ZWTynDYLNFTQA/giphy.gif
+ https://media.giphy.com/media/3oEjHC7al4GfnudR7y/giphy.gif*/
+h1 {
+	background-image: url(https://media.giphy.com/media/3oEjHC7al4GfnudR7y/giphy.gif);
+	background-size: cover;
+	color: transparent;
+	-moz-background-clip: text;
+	-webkit-background-clip: text;
+	text-transform: uppercase;
+	font-size: 120px;
+	line-height: .75;
+	margin: 10px 0;
+}
+/* 3 accordion */
+p.anim {
+	text-transform: uppercase;
+	letter-spacing: .5em;
+	display: inline-block;
+	/* border: 4px double rgba(255,255,255,.25); */
+	/* border-width: 4px 0; */
+	padding: 1.5em 0em;
+  position: relative;
+  text-align: center;
+	top:0%; /* 18%; */
+	left:0%;     /*50%;*/
+	width: 100% /*40em;*/
+  /* margin: 0 0 0 -20em; */
+}
+.a {
+
+  font: 700 4em/1 "Oswald", sans-serif;
+  letter-spacing: 0;
+  padding: .25em 0 .325em;
+  display: block;
+  margin: 0 auto;
+  text-shadow: 0 0 80px rgba(255,255,255,.5);
+
+/* Clip Background Image */
+
+  background: url(http://f.cl.ly/items/010q3E1u3p2Q0j1L1S1o/animated_text_fill.png) repeat-y;
+  -webkit-background-clip: text;
+  background-clip: text;
+
+/* Animate Background Image */
+
+  -webkit-text-fill-color: transparent;
+  -webkit-animation: aitf 80s linear infinite;
+
+/* Activate hardware acceleration for smoother animations */
+
+  -webkit-transform: translate3d(0,0,0);
+  -webkit-backface-visibility: hidden;
+
+}
+
+
+/* Animate Background Image */
+
+@-webkit-keyframes aitf {
+0% { background-position: 0% 50%; }
+100% { background-position: 100% 50%; }
 }
