--- a/css/app.css
+++ b/css/app.css
@@ -1,10 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
 
-/* getting rid of this margin styling centers the page */
-/* .grid-container
-{
-    margin-left: 0.5rem;
-} */
 #inputModal
 {
    border-radius: 2rem;
@@ -88,6 +83,26 @@ h1 {
 }
 
 .recipeName:hover{
-  color: yellow;
+  color: darkred;
+  cursor: pointer;
 }
 
+#myBtn {
+	display: none; /* Hidden by default */
+	position: fixed; /* Fixed/sticky position */
+	bottom: 20px; /* Place the button at the bottom of the page */
+	right: 30px; /* Place the button 30px from the right */
+	z-index: 99; /* Make sure it does not overlap */
+	border: none; /* Remove borders */
+	outline: none; /* Remove outline */
+	background-color: red; /* Set a background color */
+	color: white; /* Text color */
+	cursor: pointer; /* Add a mouse pointer on hover */
+	padding: 15px; /* Some padding */
+	border-radius: 10px; /* Rounded corners */
+	font-size: 18px; /* Increase font size */
+  }
+  
+  #myBtn:hover {
+	background-color: #555; /* Add a dark-grey background on hover */
+  }
